entradas de menu

--- a/reservation-demo/src/main/resources/messages.properties
+++ b/reservation-demo/src/main/resources/messages.properties
@@ -219,6 +219,8 @@ label_stock_id=Id
 label_stock_iterable_to_add_cant_be_null_message=I T E R A B L E_ T O_ A D D_ C A N T_ B E_ N U L L_ M E S S A G E
 label_stock_iterable_to_remove_cant_be_null_message=I T E R A B L E_ T O_ R E M O V E_ C A N T_ B E_ N U L L_ M E S S A G E
 label_stock_plural=Stocks
+label_stock_increase=Increase Stock
+label_stock_decrease=Decrease Stock
 label_stock_producto=Producto
 label_stock_reservas=Reservas
 label_stock_reservas_customer=Customer
