--- a/reservation-demo/src/main/resources/messages.properties
+++ b/reservation-demo/src/main/resources/messages.properties
@@ -135,6 +135,9 @@ label_edit_search=Edit search
 label_increase=Increase
 label_increase_entity=Increase {0}
 label_increase_search=Increase search
+label_decrease=Decrease
+label_decrease_entity=Decrease {0}
+label_decrease_search=Decrease search
 label_entities_found={0} found
 label_error=Error
 label_errorpage=Error page
@@ -168,6 +171,7 @@ label_owasp_title=Application developed and tested with OWASP - Web Application 
 label_product=Product
 label_product_description=Description
 label_product_increase=Increase
+label_product_decrease=Decrease
 label_product_id=Id
 label_product_iterable_to_add_cant_be_null_message=I T E R A B L E_ T O_ A D D_ C A N T_ B E_ N U L L_ M E S S A G E
 label_product_iterable_to_remove_cant_be_null_message=I T E R A B L E_ T O_ R E M O V E_ C A N T_ B E_ N U L L_ M E S S A G E
